k8s/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tz-demo-app
spec:
  selector:
    matchLabels:
      app: tz-demo-app
  replicas: 1
  template:
    metadata:
      labels:
        org: tz
        team: devops
        project: admin
        environment: ${STAGING}
        app: tz-demo-app
    spec:
      imagePullSecrets:
        - name: registry-creds
      containers:
      - name: tz-demo-app
        image: ${REPOSITORY_TAG}
        imagePullPolicy: Always
#        readinessProbe:
#          httpGet:
#            path: /health
#            port: 3000
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tz-demo-app
spec:
  type: NodePort
  selector:
    app: tz-demo-app
  ports:
    - port: 80
      name: api-80
      targetPort: 3000
#    - port: 443
#      name: api-443
#      targetPort: 443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tz-demo-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:${AWS_REGION}:${ACCOUNT_ID}:certificate/${CERTIFICATE}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Retry-After,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30,slow_start.duration_seconds=30,stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
    alb.ingress.kubernetes.io/target-type: ip
#    alb.ingress.kubernetes.io/security-groups: ${SECURITY_GROUP}
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: demo-app.devops.${CLUSTER_NAME}.${DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tz-demo-app
            port:
              number: 80
